@@ -26,7 +26,7 @@ my $prereqs  = {
     'Subclass::Of' => '0.003',
     'Try::Tiny' => '0.22',
     'URI' => '1.67',
-    'Unexpected' => 'v0.40.0',
+    'Unexpected' => 'v0.43.0',
     'namespace::autoclean' => '0.26',
     'perl' => '5.010001',
     'strictures' => '2.000000'
