@@ -9,7 +9,7 @@ requires "Role::Tiny" => "2.000001";
 requires "Subclass::Of" => "0.003";
 requires "Try::Tiny" => "0.22";
 requires "URI" => "1.67";
-requires "Unexpected" => "v0.40.0";
+requires "Unexpected" => "v0.43.0";
 requires "namespace::autoclean" => "0.26";
 requires "perl" => "5.010001";
 requires "strictures" => "2.000000";
