@@ -15,7 +15,7 @@ Role::Tiny           = 2.000001
 Subclass::Of         = 0.003
 Try::Tiny            = 0.22
 URI                  = 1.67
-Unexpected           = v0.40.0
+Unexpected           = v0.43.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
